--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "ds-datepicker",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "homepage": "https://github.com/dschwank",
     "authors": [
         "Dominik Schwank <Github@Schwank.cc>"
@@ -13,6 +13,11 @@
         "ng",
         "ds"
     ],
+    "main": [
+        "./dist/ds-datepicker.min.js",
+        "./dist/ds-datepicker.templates.min.js",
+        "./dist/css/styles.css"
+    ],
     "license": "MIT",
     "ignore": [
         "**/.*",
@@ -22,10 +27,10 @@
         "tests"
     ],
     "dependencies": {
-        "angular": "~1.2",
+        "angular": "~1.3",
         "angular-dateparser": "~1.0.9"
     },
     "devDependencies": {
-        "angular-mocks": "~1.2"
+        "angular-mocks": "~1.3"
     }
 }
