--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-    "name": "ds-datepicker",
-    "version": "0.0.1",
-    "description": "Angular datepicker module without any external dependencies.",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/dschwank/ds-slider"
-    },
-    "keywords": [
-        "angularjs",
-        "angular",
-        "datepicker",
-        "ng",
-        "ds"
-    ],
-    "author": [
-        "Dominik Schwank <Dominik@Schwank.cc>"
-    ],
-    "license": "MIT",
-    "bugs": {
-        "url": "---"
-    },
-    "homepage": "---",
-    "dependencies": {
-        "karma": "^0.12.3"
-    },
-    "devDependencies": {
-        "gulp": "~3.2.2",
-        "gulp-clean": "~0.2.4",
-        "gulp-concat": "^2.2.0",
-        "gulp-filter": "~0.3.1",
-        "gulp-grunt": "~0.4.0",
-        "gulp-minify-css": "~0.3.0",
-        "gulp-minify-html": "^0.1.3",
-        "gulp-ng-html2js": "^0.1.6",
-        "gulp-ngmin": "~0.1.2",
-        "gulp-remove-use-strict": "0.0.2",
-        "gulp-uglify": "~0.2.1",
-        "gulp-useref": "~0.2.2",
-        "karma-jasmine": "^0.1.5",
-        "karma-ng-html2js-preprocessor": "^0.1.0",
-        "karma-phantomjs-launcher": "^0.1.4"
-    }
+  "name": "ds-datepicker",
+  "version": "0.0.2",
+  "description": "Angular datepicker module without any external dependencies.",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dschwank/ds-datepicker"
+  },
+  "keywords": [
+    "angularjs",
+    "angular",
+    "datepicker",
+    "ng",
+    "ds"
+  ],
+  "author": [
+    "Dominik Schwank <Dominik@Schwank.cc>"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/dschwank/ds-datepicker/issues"
+  },
+  "homepage": "https://github.com/dschwank/ds-datepicke",
+  "dependencies": {},
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-clean": "*",
+    "gulp-concat": "^2.5.2",
+    "gulp-filter": "^2.0.2",
+    "gulp-grunt": "^0.5.2",
+    "gulp-minify-css": "^1.0.0",
+    "gulp-minify-html": "^1.0.1",
+    "gulp-ng-html2js": "^0.2.0",
+    "gulp-ngdocs": "*",
+    "gulp-ngmin": "*",
+    "gulp-remove-use-strict": "*",
+    "gulp-uglify": "^1.1.0",
+    "gulp-useref": "*",
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.12.32",
+    "karma-jasmine": "^0.3.5",
+    "karma-ng-html2js-preprocessor": "*",
+    "karma-phantomjs-launcher": "*",
+    "main-bower-files": "^2.6.2"
+  }
 }
