--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "ds-datepicker",
-    "version": "0.0.3",
+    "version": "0.1.0",
     "homepage": "https://github.com/dschwank",
     "authors": [
         "Dominik Schwank <Github@Schwank.cc>"
@@ -23,14 +23,19 @@
         "**/.*",
         "node_modules",
         "bower_components",
+        "src",
+        "package.json",
+        "karma.conf.js",
+        "index.html",
+        "Gulpfile.js",
         "test",
         "tests"
     ],
     "dependencies": {
-        "angular": "~1.3",
-        "angular-dateparser": "~1.0.9"
+        "angular": "~1.4",
+        "angular-dateparser": "1.0.12"
     },
     "devDependencies": {
-        "angular-mocks": "~1.3"
+        "angular-mocks": "~1.4"
     }
 }
