--- a/package.json
+++ b/package.json
@@ -23,27 +23,28 @@
   "bugs": {
     "url": "https://github.com/dschwank/ds-datepicker/issues"
   },
-  "homepage": "https://github.com/dschwank/ds-datepicke",
+  "homepage": "https://github.com/dschwank/ds-datepicker",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.8.11",
+    "gulp": "^3.9.0",
     "gulp-clean": "*",
-    "gulp-concat": "^2.5.2",
-    "gulp-filter": "^2.0.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-filter": "^3.0.1",
     "gulp-grunt": "^0.5.2",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-minify-html": "^1.0.1",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-minify-html": "^1.0.4",
     "gulp-ng-html2js": "^0.2.0",
     "gulp-ngdocs": "*",
     "gulp-ngmin": "*",
     "gulp-remove-use-strict": "*",
-    "gulp-uglify": "^1.1.0",
+    "gulp-uglify": "^1.4.2",
     "gulp-useref": "*",
-    "jasmine-core": "^2.2.0",
-    "karma": "^0.12.32",
-    "karma-jasmine": "^0.3.5",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.11",
+    "karma-jasmine": "^0.3.6",
     "karma-ng-html2js-preprocessor": "*",
     "karma-phantomjs-launcher": "*",
-    "main-bower-files": "^2.6.2"
+    "main-bower-files": "^2.9.0"
   }
 }
