--- a/bower.json
+++ b/bower.json
@@ -1,41 +1,41 @@
 {
-    "name": "ds-datepicker",
-    "version": "0.1.3",
-    "homepage": "https://github.com/dschwank",
-    "authors": [
-        "Dominik Schwank <Github@Schwank.cc>"
-    ],
-    "description": "Angular datepicker module without any external dependencies.",
-    "keywords": [
-        "angularjs",
-        "angular",
-        "datepicker",
-        "ng",
-        "ds"
-    ],
-    "main": [
-        "./dist/ds-datepicker.min.js",
-        "./dist/ds-datepicker.templates.min.js",
-        "./dist/css/styles.css"
-    ],
-    "license": "MIT",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "src",
-        "package.json",
-        "karma.conf.js",
-        "index.html",
-        "Gulpfile.js",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "angular": "~1.4",
-        "angular-dateparser": "1.0.12"
-    },
-    "devDependencies": {
-        "angular-mocks": "~1.4"
-    }
+  "name": "ds-datepicker",
+  "version": "1.0.0-alpha.0",
+  "homepage": "https://github.com/dschwank",
+  "authors": [
+    "Dominik Schwank <Github@Schwank.cc>"
+  ],
+  "description": "Angular datepicker module without any external dependencies.",
+  "keywords": [
+    "angularjs",
+    "angular",
+    "datepicker",
+    "ng",
+    "ds"
+  ],
+  "main": [
+    "./dist/ds-datepicker.min.js",
+    "./dist/ds-datepicker.templates.min.js",
+    "./dist/css/styles.css"
+  ],
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "src",
+    "package.json",
+    "karma.conf.js",
+    "index.html",
+    "Gulpfile.js",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "angular": ">=1.4",
+    "moment": "^2.11.2"
+  },
+  "devDependencies": {
+    "angular-mocks": ">=1.4"
+  }
 }
