--- a/package.json
+++ b/package.json
@@ -26,25 +26,27 @@
   "homepage": "https://github.com/dschwank/ds-datepicker",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-clean": "*",
+    "bower": "^1.7.7",
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
-    "gulp-connect": "^2.2.0",
-    "gulp-filter": "^3.0.1",
-    "gulp-grunt": "^0.5.2",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-minify-html": "^1.0.4",
-    "gulp-ng-html2js": "^0.2.0",
-    "gulp-ngdocs": "*",
-    "gulp-ngmin": "*",
-    "gulp-remove-use-strict": "*",
-    "gulp-uglify": "^1.4.2",
-    "gulp-useref": "*",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.11",
-    "karma-jasmine": "^0.3.6",
-    "karma-ng-html2js-preprocessor": "*",
-    "karma-phantomjs-launcher": "*",
-    "main-bower-files": "^2.9.0"
+    "gulp-connect": "^2.3.1",
+    "gulp-cssnano": "^2.1.1",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-ng-annotate": "^1.1.0",
+    "gulp-ng-html2js": "^0.2.2",
+    "gulp-ngdocs": "^0.2.13",
+    "gulp-remove-use-strict": "0.0.2",
+    "gulp-rimraf": "^0.2.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.2",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.21",
+    "karma-angular-filesort": "^1.0.1",
+    "karma-coverage": "^0.5.3",
+    "karma-jasmine": "^0.3.7",
+    "karma-ng-html2js-preprocessor": "^0.2.1",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "main-bower-files": "^2.11.1",
+    "phantomjs-prebuilt": "^2.1.4"
   }
 }
